@@ -387,6 +387,8 @@ changes to your code:
 
 * Everything is all in the details!
 
+* Developers can include intobject.h after Python.h for some PyInt_ aliases.
+
 .. ======================================================================
 
 
